# BFG-Mission

./: .env.example  .gitignore  Dockerfile  __dialog_created.py  admin_panel.Dockerfile  configreader.py  entrypoint.sh  pyproject.toml  scheduler.Dockerfile  test.py
admin_panel/: auth.py  main.py  views.py
bot/: __main__.py
bot/db/: base.py  redis.py
bot/db/models/: models.py
bot/db/repositories/: repo.py
bot/dialogs/: __init__.py
bot/dialogs/ai_agent_menu_dialogs/: __init__.py  getters.py  keyboards.py  on_clicks.py  states.py  windows.py
bot/dialogs/categories_menu_dialogs/: __init__.py  getters.py  keyboards.py  on_clicks.py  states.py  windows.py
bot/dialogs/create_task_dialogs/: __init__.py  getters.py  keyboards.py  (+3 more)
bot/entities/: other.py  report_read.py  shared.py  task.py  users.py
bot/exceptions/: base.py  report_exceptions.py  task_exceptions.py  user_exceptions.py
bot/filters/: start_filters.py
bot/handlers/: __init__.py  ai_handlers.py  help.py  start.py  task_callbacks.py
bot/keyboards/: ai.py  task.py
bot/middleware/: db.py  i18n_dialog.py  log_middleware.py
bot/services/: ai_service.py  create_task_with_csv.py  csv_service.py  log_service.py  mailing_service.py  startup.py  task_services.py
bot/states/: ai.py
bot/utils/: calendar.py  consts.py  dialog_utils.py  enum.py  misc.py  repository.py  set_bot_commands.py  unitofwork.py
excel_files/: work_schedule_7_2025.csv
migrations/: env.py
migrations/versions/: 197fdc9c18df_.py  fa690eff369a_.py  ff8527feba6b_.py
scheduler/: func.py  jobs.py  main.py  services.py
(+36 files in other folders)
