[project]
name = "BFG_Mission"
version = "0.1.0"
description = "Botanic Flower Group"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "aiogram-dialog>=2.4.0",
    "aiogram-i18n>=1.4",
    "alembic>=1.16.4",
    "arq>=0.26.3",
    "asyncpg>=0.30.0",
    "backoff>=2.2.1",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "fluent-runtime>=0.4.0",
    "itsdangerous>=2.2.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "mypy>=1.11",
    "openai>=1.97.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "starlette-admin>=0.15.1",
    "tzdata>=2025.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
